--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>GreenNations</title>
+	<title>EduCentral</title>
 	<base href="/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
